# GccAndCMakeTasks

./: README.md
CmakeTasks/CMaketask1/: CMakeLists.txt
CmakeTasks/CMaketask1/app/: CMakeLists.txt  main.cpp
CmakeTasks/CMaketask1/src/: CMakeLists.txt  mymath.cpp
CmakeTasks/CMaketask2/: CMakeLists.txt
CmakeTasks/CMaketask2/src/: main.cpp
gccTasks/task1/: main  main.cpp  mymath.cpp  mymath.h
gccTasks/task2/: main.cpp  myapp
gccTasks/task3/: debugrel  main.cpp  myapp  myapp_release
