
# add_executable(MyProject main.cpp)
include_directories(${CMAKE_SOURCE_DIR}/include)
link_libraries(mymath)
add_executable(MyProject main.cpp)

# add_executable(MyProject main.cpp)
# link_directories(/home/noman-shafique/Training/GccAndCMakeTasks/CmakeTasks/CMaketask1/src)
# include_directories(${CMAKE_SOURCE_DIR}/include)
# add_executable(MyProject main.cpp)

# target_link_libraries(MyProject mymath)

